--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "chatstir",
   "version": "1.0.0",
   "description": "Angular and Bootstrap 4 Admin Template.",
-  "author": "Akveo <contact@akveo.com>",
-  "homepage": "http://akveo.github.io/chatstir/",
+  "author": "teddybear",
+  "homepage": "https://github.com/tedma4",
   "repository": {
     "type": "git",
-    "url": "https://github.com/akveo/chatstir.git"
+    "url": "https://github.com/tedma4/chatstir.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/chatstir/issues"
+    "url": "https://github.com/tedma4/chatstir/issues"
   },
   "license": "MIT",
+  "engines": {
+    "node": "v8.1.0",
+    "npm": "5.0.3"
+  },
   "scripts": {
     "ng": "ng",
-    "rimraf": "rimraf",
+    "dev": "ng serve",
     "changelog": "standard-changelog",
-    "start": "ng serve",
+    "start": "node server.js",
     "start:hmr": "ng serve --hmr",
     "start:aot": "ng serve --aot",
     "start:prod": "ng serve --prod",
@@ -25,7 +29,6 @@
     "build:prod": "npm run build -- --prod",
     "build:prod:aot": "npm run build:prod -- --aot",
     "build:ci": "npm run build:prod && npm run build:prod:aot",
-    "build:demo": "npm run build:prod:aot -- --base-href \"http://akveo.com/chatstir/\"",
     "test": "ng test -sr",
     "test:coverage": "npm run clean:coverage && ng test -sr -cc",
     "lint": "ng lint",
@@ -40,6 +43,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.4",
+    "@angular/compiler-cli": "4.1.3",
     "@angular/animations": "4.1.3",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
@@ -86,8 +91,6 @@
     "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "4.1.3",
     "@types/fullcalendar": "2.7.40",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "2.0.41",
