--- a/package.json
+++ b/package.json
@@ -2,26 +2,21 @@
   "name": "chatstir",
   "version": "1.0.0",
   "description": "Angular and Bootstrap 4 Admin Template.",
-  "author": "teddybear",
-  "homepage": "https://github.com/tedma4",
+  "author": "Akveo <contact@akveo.com>",
+  "homepage": "http://akveo.github.io/chatstir/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tedma4/chatstir.git"
+    "url": "https://github.com/akveo/chatstir.git"
   },
   "bugs": {
-    "url": "https://github.com/tedma4/chatstir/issues"
+    "url": "https://github.com/akveo/chatstir/issues"
   },
   "license": "MIT",
-  "engines": {
-    "node": "v8.1.0",
-    "npm": "5.0.3"
-  },
   "scripts": {
     "ng": "ng",
-    "dev": "ng serve",
-    "postinstall": "ng build --aot -prod",
+    "rimraf": "rimraf",
     "changelog": "standard-changelog",
-    "start": "node server.js",
+    "start": "ng serve",
     "start:hmr": "ng serve --hmr",
     "start:aot": "ng serve --aot",
     "start:prod": "ng serve --prod",
@@ -30,7 +25,9 @@
     "build:prod": "npm run build -- --prod",
     "build:prod:aot": "npm run build:prod -- --aot",
     "build:ci": "npm run build:prod && npm run build:prod:aot",
+    "build:demo": "npm run build:prod:aot -- --base-href \"http://akveo.com/chatstir/\"",
     "test": "ng test -sr",
+    "postinstall": "npm run build:prod",
     "test:coverage": "npm run clean:coverage && ng test -sr -cc",
     "lint": "ng lint",
     "lint:styles": "stylelint ./src/app/**/*.scss",
@@ -44,12 +41,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "4.1.3",
     "@angular/animations": "4.1.3",
+    "@angular/cli": "^1.2.0",
+    "typescript": "2.3.2",
+    "@types/node": "6.0.69",
+    "@angular/compiler-cli": "4.1.3",
+    "@types/jasmine": "2.5.38",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
+    "@angular/core": "^4.1.3",
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
@@ -61,13 +61,11 @@
     "@ngx-translate/http-loader": "0.0.3",
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
-    "angular2-datatable": "0.6.0",
     "animate.css": "3.5.2",
     "bootstrap": "4.0.0-alpha.6",
     "chart.js": "1.1.1",
     "chartist": "0.10.1",
     "chroma-js": "1.3.3",
-    "ckeditor": "4.6.2",
     "core-js": "2.4.1",
     "easy-pie-chart": "2.1.7",
     "font-awesome": "4.7.0",
@@ -79,9 +77,7 @@
     "leaflet": "0.7.7",
     "leaflet-map": "0.2.1",
     "lodash": "4.17.4",
-    "ng2-ckeditor": "1.1.6",
     "ng2-completer": "1.3.1",
-    "ng2-handsontable": "0.48.0",
     "ng2-slim-loading-bar": "4.0.0",
     "ng2-smart-table": "1.0.3",
     "ng2-tree": "2.0.0-alpha.5",
@@ -93,11 +89,9 @@
   },
   "devDependencies": {
     "@types/fullcalendar": "2.7.40",
-    "@types/jasmine": "2.5.38",
     "@types/jquery": "2.0.41",
     "@types/jquery.slimscroll": "1.3.30",
     "@types/lodash": "4.14.61",
-    "@types/node": "6.0.69",
     "codelyzer": "3.0.1",
     "gh-pages": "0.12.0",
     "jasmine-core": "2.5.2",
@@ -117,7 +111,6 @@
     "tslint": "5.2.0",
     "tslint-eslint-rules": "4.0.0",
     "tslint-language-service": "0.9.6",
-    "typescript": "2.3.2",
     "typogr": "0.6.6",
     "underscore": "1.8.3",
     "wintersmith": "2.2.5",
