--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "changelog": "standard-changelog",
     "start": "ng serve",
     "start:hmr": "ng serve --hmr",
-    "start:aot": "ng serve --aot",
     "start:prod": "ng serve --prod",
     "start:prod:aot": "ng serve --prod --aot",
     "build": "npm run clean:dist && ng build",
@@ -27,7 +26,7 @@
     "build:ci": "npm run build:prod && npm run build:prod:aot",
     "build:demo": "npm run build:prod:aot -- --base-href \"http://akveo.com/chatstir/\"",
     "test": "ng test -sr",
-    "postinstall": "npm run build:prod",
+    "postinstall": "npm run clean:dist && ng build -- --prod",
     "test:coverage": "npm run clean:coverage && ng test -sr -cc",
     "lint": "ng lint",
     "lint:styles": "stylelint ./src/app/**/*.scss",
